First prototype with several changes
This version contain an stable version of home, nav bar, identity section and values section.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<!-- Owl Carousel CSS
    ================================================== -->
-  <link rel="stylesheet" href="css/owl.theme.css">
+  	<link rel="stylesheet" href="css/owl.theme.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 
 	<!-- Lightbox CSS
@@ -64,11 +64,11 @@
 
 <!-- Home section
 ================================================== -->
-<section id="home" class="parallax-section">
+<section id="home" class="">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 col-sm-12">
-				<a href="#" class="btn btn-default section-btn  wow fadeInUp" data-wow-delay="1s">SERVICIOS</a>
+			<div class="col-md-8 col-sm-12 ">
+				<a href="#" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="1s">SERVICIOS</a>
 				<a href="#" class="btn btn-default section-btn smoothScroll wow fadeInUp" data-wow-delay="1.5s">CONTÁCTENOS</a>
 			</div>
 		</div>
@@ -78,19 +78,60 @@
 
 <!-- Navigation section
 ================================================== -->
-<div class="customnav navbar navbar-default navbar-static-top" role="navigation">
-	<div class="container">
-		<div class="collapse navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li><a title="Los Tejos" href="http://www.google.com"><img src="images/logo.png" width="250" height="100" alt="Los Tejos" /></a></li>
-				<li><a href="#home" >INICIO</a></li>
-				<li><a href="#team" class="smoothScrolll">NOSOTROS</a></li>
-				<li><a href="#portfolio">CLIENTES</a></li>
-				<li><a href="#contact" class="smoothScrolll">PUBLICACIONES</a></li>
-			</ul>
+<div class="top-position">
+	<div class="navbar navbar-default" role="navigation">
+		<div class="container">
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li><a title="ch s.a.s" href="#home"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
+					<li><a href="#home" >INICIO</a></li>
+					<li><a href="#team" class="smoothScrolll">NOSOTROS</a></li>
+					<li><a href="#portfolio">CLIENTES</a></li>
+					<li><a href="#contact" class="smoothScrolll">PUBLICACIONES</a></li>
+					<li><a href="#contact" class="smoothScrolll">INDICADORES</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </div>
+
+
+<!-- Curved separator -->
+<div class="col-md-12 separator">
+	<img src="images/separador.png" class="img-responsive">
+</div>	
+
+
+<!-- Identity (Mision, Vision y valores) seccion
+================================================== -->
+<section id="identity" class="parallax-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
+				<img src="images/vi_mi_ob.png" class="img-responsive" alt="Identidad">
+			</div>		
+		</div>
+	</div>
+</section>
+
+
+
+<!-- Values (Valores y equipo profesional) seccion
+================================================== -->
+<section id="values" class="parallax-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
+				<img src="images/values.png" class="img-responsive" alt="Valores y equipo profesional">
+			</div>		
+		</div>
+	</div>
+</section>
+
+<!-- Curved separator -->
+<div class="col-md-12 separator2">
+	<img src="images/separador.png" class="img-responsive">
+</div>	
 
 
 <!-- Service section
@@ -185,8 +226,7 @@
 	<div class="container">
 		<div class="row">
 
-			<!-- Section title
-			==================================================
+			
 			<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">
 				<div class="section-title">
 					<h1>team member</h1>
