--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,7 @@
    ================================================== -->
 	<link rel="stylesheet" href="css/nivo-lightbox.css">	
 
+
 	<!-- Main CSS
    ================================================== -->
 	<link rel="stylesheet" href="css/style.css">
@@ -63,7 +64,7 @@
 		<div class="row">
 			<div class="col-md-8 col-sm-12 ">
 				<a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">SERVICIOS</a>
-				<a href="contact.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="1.4s">CONTÁCTENOS</a>				
+				<a href="#contact" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="1.4s">CONTÁCTENOS</a>				
 			</div>
 		</div>
 	</div>
@@ -79,9 +80,9 @@
 				<ul class="nav navbar-nav">
 					<li><a title="ch s.a.s" href="#home"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
 					<li><a href="#home" >INICIO</a></li>
-					<li><a href="#nosotros" class="smoothScrolll">NOSOTROS</a></li>
-					<li><a href="#equipo" class="smoothScrolll">VALORES</a></li>
-					<li><a href="customers.html">CLIENTES</a></li>								
+					<li><a href="index.html" class="smoothScrolll">NOSOTROS</a></li>
+					<li><a href="index.html" class="smoothScrolll">VALORES</a></li>
+					<li><a href="customers.html">CLIENTES</a></li>										
 				</ul>
 			</div>
 		</div>
@@ -95,68 +96,6 @@
 </div>	
 
 
-<!-- Identity (Mision, Vision y valores) seccion
-================================================== -->
-<div id="nosotros"></div>
-
-<!-- Section title -->
-<div class="row">
-	<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">
-		<div class="identity-title">
-			<h1>Nosotros</h1>				
-		</div>
-	</div>
-</div>
-
-<section id="identity" class="parallax-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 wow fadeInUp" data-wow-delay="1.2s">
-				<img src="images/vi_mi_ob.png" class="img-responsive" alt="Identidad">
-			</div>		
-		</div>
-	</div>
-</section>
-
-
-
-<!-- Values (Valores y equipo profesional) seccion
-================================================== -->
-<div id="equipo" class="no-space"></div>
-
-<!-- Section title -->
-<div class="row">
-	<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">				
-		<h1>Valores</h1>						
-	</div>
-</div>
-
-<section id="values" class="parallax-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 wow fadeInUp" data-wow-delay="1.2s">
-				<img src="images/values.png" class="img-responsive" alt="Valores y equipo profesional">
-			</div>		
-		</div>
-	</div>
-</section>
-
-
-
-<!-- Customers seccion
-================================================== -->
-<div id="customers"></div>
-
-	<!-- Section title 
-	<div class="row ">
-		<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">						
-			<div class="customers-title ">
-				<h1>Principales clientes</h1>				
-			</div>									
-		</div>
-	</div>-->
-
-
 <!-- indicadores fondo -->
 <div class="col-md-12 service">
 	<img src="images/indicadores.png" class="img-responsive">
@@ -167,8 +106,6 @@
 <!-- Contact seccion
 ================================================== -->
 
-
-	
 <!-- indicadores fondo -->
 <div id="contact" class="col-md-12 service">
 	<img src="images/contactenos.png" class="img-responsive">
@@ -235,6 +172,9 @@
 </footer>
 -->
 
+
+
+
 <!-- Javascript
 ================================================== -->
 <script src="js/jquery.js"></script>
@@ -248,6 +188,7 @@
 <script src="js/custom.js"></script>
 
 
-
 </body>
 </html>
+
+
