--- a/index.html
+++ b/index.html
@@ -112,12 +112,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 wow fadeInUp" data-wow-delay="1.2s">
-				<img src="images/vi_mi_ob.png" class="img-responsive" alt="Identidad">
+				<img src="images/vi_mi_ob.webp" class="img-responsive" alt="Identidad">
 			</div>		
 		</div>
 	</div>
 </section>
-
 
 
 <!-- Values (Valores y equipo profesional) seccion
