--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 
 <!-- indicadores fondo -->
 <div class="col-md-12 service">
-	<img src="images/indicadores.png" class="img-responsive">
+	<img src="images/indicadores.jpg" class="img-responsive">
 </div>	
 
 
@@ -108,7 +108,7 @@
 
 <!-- indicadores fondo -->
 <div id="contact" class="col-md-12 service">
-	<img src="images/contactenos.png" class="img-responsive">
+	<img src="images/contactenos.jpg" class="img-responsive">
 </div>	
 
 
