--- a/services.html
+++ b/services.html
@@ -115,7 +115,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
-					<img src="images/consultoria.png" class="img-responsive" alt="consultoria">
+					<img src="images/consultoria.jpg" class="img-responsive" alt="consultoria">
 				</div>		
 			</div>
 		</div>
@@ -126,7 +126,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
-					<img src="images/auditoria.png" class="img-responsive" alt="auditoria">
+					<img src="images/auditoria.jpg" class="img-responsive" alt="auditoria">
 				</div>		
 			</div>
 		</div>
@@ -137,7 +137,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
-					<img src="images/revisoria.png" class="img-responsive" alt="revisoria">
+					<img src="images/revisoria.jpg" class="img-responsive" alt="revisoria">
 				</div>		
 			</div>
 		</div>
@@ -148,7 +148,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
-					<img src="images/outsourcing.png" class="img-responsive" alt="outsourcing">
+					<img src="images/outsourcing.jpg" class="img-responsive" alt="outsourcing">
 				</div>		
 			</div>
 		</div>
@@ -159,7 +159,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
-					<img src="images/asesorias.png" class="img-responsive" alt="asesorias">
+					<img src="images/asesorias.jpg" class="img-responsive" alt="asesorias">
 				</div>		
 			</div>
 		</div>
