New changes on header and footer

--- a/index_entire.html
+++ b/index_entire.html
@@ -69,7 +69,7 @@
 
 <!-- Navigation section
 ================================================== -->
-<div class="top-position">
+<div class="">
 	<div class="navbar navbar-default" role="navigation">
 		<div class="container">
 			<div class="collapse navbar-collapse">
@@ -316,7 +316,6 @@
 <script src="js/nivo-lightbox.min.js"></script>
 <script src="js/smoothscroll.js"></script>
 <script src="js/wow.min.js"></script>
-<script src="js/lightbox.js"></script>
 
 
 <script src="js/custom.js"></script>
