--- a/index.html
+++ b/index.html
@@ -56,43 +56,36 @@
 </div>
 
 
-<!-- Home section
-================================================== -->
-<section id="home" class="">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-sm-12 ">
-				<a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">SERVICIOS</a>
-				<a href="contact.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="1.4s">CONTÁCTENOS</a>				
-			</div>
-		</div>
-	</div>
-</section>
-
-
 <!-- Navigation section
 ================================================== -->
-<div class="top-position">
+<div id="navigation" class="top-position">
 	<div class="navbar navbar-default" role="navigation">
 		<div class="container">
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a title="ch s.a.s" href="#home"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
-					<li><a href="#home" >INICIO</a></li>
-					<li><a href="#nosotros" class="smoothScrolll">NOSOTROS</a></li>
-					<li><a href="#equipo" class="smoothScrolll">VALORES</a></li>
-					<li><a href="customers.html">CLIENTES</a></li>								
+					<li><a title="ch s.a.s" href="#navigation"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
+					<li><a href="#navigation" >INICIO</a></li>
+					<li><a href="#nosotros" class="smoothScrolll">NOSOTROS</a></li>					
+					<li><a href="customers.html">CLIENTES</a></li>					
+					<li><a href="contact.html" class="smoothScrolll">INDICADORES</a></li>			
 				</ul>
 			</div>
 		</div>
 	</div>
 </div>
 
-
-<!-- Curved separator -->
-<div class="col-md-12 separator">
-	<img src="images/separador.png" class="img-responsive">
-</div>	
+<!-- Home section
+================================================== -->
+<section id="home">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 col-sm-12 ">			  	
+				<a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.4s">SERVICIOS</a>
+				<a href="contact.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTENOS</a>							  	
+			</div>
+		</div>
+	</div>
+</section>
 
 
 <!-- Identity (Mision, Vision y valores) seccion
@@ -108,10 +101,10 @@
 	</div>
 </div>
 
-<section id="identity" class="parallax-section">
+<section id="identity" >
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 wow fadeInUp" data-wow-delay="1.2s">
+			<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
 				<img src="images/vi_mi_ob.webp" class="img-responsive" alt="Identidad">
 			</div>		
 		</div>
@@ -133,8 +126,8 @@
 <section id="values" class="parallax-section">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 wow fadeInUp" data-wow-delay="1.2s">
-				<img src="images/values.png" class="img-responsive" alt="Valores y equipo profesional">
+			<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
+				<img src="images/values.jpg" class="img-responsive" alt="Valores y equipo profesional">
 			</div>		
 		</div>
 	</div>
@@ -143,96 +136,41 @@
 
 
 <!-- Customers seccion
-================================================== -->
+================================================== 
 <div id="customers"></div>
 
-	<!-- Section title 
+
 	<div class="row ">
 		<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">						
 			<div class="customers-title ">
 				<h1>Principales clientes</h1>				
 			</div>									
 		</div>
-	</div>-->
+	</div>
+-->
 
-
-<!-- indicadores fondo -->
+<!-- indicadores fondo 
 <div class="col-md-12 service">
-	<img src="images/indicadores.png" class="img-responsive">
+	<img src="images/indicadores.jpg" class="img-responsive">
 </div>	
-
-
-
-<!-- Contact seccion
-================================================== -->
-
+-->
 
 	
-<!-- indicadores fondo -->
+<!-- indicadores fondo 
 <div id="contact" class="col-md-12 service">
-	<img src="images/contactenos.png" class="img-responsive">
+	<img src="images/contactenos.jpg" class="img-responsive">
 </div>	
-
-
-<!-- Contact section
-+++ Oculta temporalmente +++
-==================================================
-<section id="contact" class="parallax-section">
-	<div class="container">
-		<div class="row">
-
-
-			<div class="col-md-offset-2 col-md-8 col-sm-12">
-				<div class="section-title">
-					<h1>Get in touch</h1>
-					<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>
-				</div>
-			</div>
-
-
-			<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 wow fadeIn" data-wow-delay="0.6s">
-				<form action="contact.php" method="post">
-					<div class="col-md-6 col-sm-6">
-						<input type="text" class="form-control" placeholder="Name" name="name" required>
-						<input type="email" class="form-control" placeholder="Email" name="email" required>
-						<input type="telephone" class="form-control" placeholder="Phone" name="phone" required>
-					</div>
-					<div class="col-md-6 col-sm-6">
-						<textarea class="form-control" placeholder="Message" rows="7" name"message" required></textarea>
-					</div>
-					<div class="col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8">
-						<input type="submit" class="form-control" value="SHOOT MESSAGE">
-					</div>
-				</form>
-			</div>
-
-		</div>
-	</div>
-</section>
 -->
 
-<!-- Footer section
-================================================== 
+<!-- Pie de pagina (Footer)
+==================================================  -->
 <footer>
-	<div class="container">
-		<div class="row">
-
-			<div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="1s">
-				<p>Copyright © Genius HTML Template | All Rights Reserved.</p>
-				<ul class="social-icon">
-					<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-behance wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-github wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-google-plus wow fadeIn" data-wow-delay="0.9s"></a></li>
-				</ul>
-			</div>
-
-		</div>
-	</div>
+	<div class="col-md-12 no-padding">
+		<img src="images/pie_texto.png" class="img-responsive">
+	</div>	
 </footer>
--->
+
+
 
 <!-- Javascript
 ================================================== -->
