--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 					<li><a title="ch s.a.s" href="#navigation"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
 					<li><a href="#navigation" >INICIO</a></li>
 					<li><a href="#nosotros" class="smoothScrolll">NOSOTROS</a></li>					
-					<li><a href="customers.html">CLIENTES</a></li>					
-					<li><a href="contact.html" class="smoothScrolll">INDICADORES</a></li>			
+					<li><a href="#">CLIENTES</a></li>		
+					<li><a href="#" class="smoothScrolll">INDICADORES</a></li>
+					<!--<li><a href="contact.html" class="smoothScrolll">INDICADORES</a></li>	-->		
 				</ul>
 			</div>
 		</div>
@@ -81,7 +82,7 @@
 		<div class="row">
 			<div class="col-md-8 col-sm-12 ">			  	
 				<a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.4s">SERVICIOS</a>
-				<a href="contact.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTENOS</a>							  	
+				<a href="#" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTENOS</a>							  	
 			</div>
 		</div>
 	</div>
