--- a/services.html
+++ b/services.html
@@ -57,44 +57,23 @@
 </div>
 
 
-<!-- Home section
-================================================== -->
-<section id="home" class="">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-sm-12 ">
-				<a href="#services" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">SERVICIOS</a>
-				<a href="contact.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="1.4s">CONTÁCTENOS</a>				
-			</div>
-		</div>
-	</div>
-</section>
-
-
 <!-- Navigation section
 ================================================== -->
-<div class="top-position">
+<div id="navigation" class="top-position">
 	<div class="navbar navbar-default" role="navigation">
 		<div class="container">
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a title="ch s.a.s" href="#home"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
-					<li><a href="#home" >INICIO</a></li>
-					<li><a href="index.html" class="smoothScrolll">NOSOTROS</a></li>
-					<li><a href="index.html" class="smoothScrolll">VALORES</a></li>
-					<li><a href="customers.html">CLIENTES</a></li>										
+					<li><a title="ch s.a.s" href="index.html"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
+					<li><a href="index.html" >INICIO</a></li>
+					<li><a href="index.html#nosotros" class="smoothScrolll">NOSOTROS</a></li>					
+					<li><a href="#">CLIENTES</a></li>					
+					<li><a href="#" class="smoothScrolll">INDICADORES</a></li>			
 				</ul>
 			</div>
 		</div>
 	</div>
 </div>
-
-
-<!-- Curved separator -->
-<div class="col-md-12 separator">
-	<img src="images/separador.png" class="img-responsive">
-</div>	
-
 
 
 <!-- Service seccion
@@ -164,6 +143,15 @@
 			</div>
 		</div>
 	</section>
+
+
+<!-- Pie de pagina (Footer)
+==================================================  -->
+<footer>
+	<div class="col-md-12 no-padding">
+		<img src="images/pie_texto.png" class="img-responsive">
+	</div>	
+</footer>
 
 <!-- Javascript
 ================================================== -->
