--- a/contact.html
+++ b/contact.html
@@ -57,43 +57,24 @@
 </div>
 
 
-<!-- Home section
-================================================== -->
-<section id="home" class="">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-sm-12 ">
-				<a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">SERVICIOS</a>
-				<a href="#contact" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="1.4s">CONTÁCTENOS</a>				
-			</div>
-		</div>
-	</div>
-</section>
-
 
 <!-- Navigation section
 ================================================== -->
-<div class="top-position">
+<div id="navigation" class="top-position">
 	<div class="navbar navbar-default" role="navigation">
 		<div class="container">
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a title="ch s.a.s" href="#home"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
-					<li><a href="#home" >INICIO</a></li>
-					<li><a href="index.html" class="smoothScrolll">NOSOTROS</a></li>
-					<li><a href="index.html" class="smoothScrolll">VALORES</a></li>
-					<li><a href="customers.html">CLIENTES</a></li>										
+					<li><a title="ch s.a.s" href="index.html"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
+					<li><a href="index.html" >INICIO</a></li>
+					<li><a href="index.html" class="smoothScrolll">NOSOTROS</a></li>					
+					<li><a href="customers.html">CLIENTES</a></li>					
+					<li><a href="contact.html" class="smoothScrolll">INDICADORES</a></li>			
 				</ul>
 			</div>
 		</div>
 	</div>
 </div>
-
-
-<!-- Curved separator -->
-<div class="col-md-12 separator">
-	<img src="images/separador.png" class="img-responsive">
-</div>	
 
 
 <!-- indicadores fondo -->
@@ -106,11 +87,11 @@
 <!-- Contact seccion
 ================================================== -->
 
-<!-- indicadores fondo -->
+<!-- indicadores fondo 
 <div id="contact" class="col-md-12 service">
 	<img src="images/contactenos.jpg" class="img-responsive">
 </div>	
-
+-->
 
 <!-- Contact section
 +++ Oculta temporalmente +++
@@ -149,29 +130,13 @@
 </section>
 -->
 
-<!-- Footer section
-================================================== 
+<!-- Pie de pagina (Footer)
+==================================================  -->
 <footer>
-	<div class="container">
-		<div class="row">
-
-			<div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="1s">
-				<p>Copyright © Genius HTML Template | All Rights Reserved.</p>
-				<ul class="social-icon">
-					<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-dribbble wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-behance wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-github wow fadeIn" data-wow-delay="0.9s"></a></li>
-					<li><a href="#" class="fa fa-google-plus wow fadeIn" data-wow-delay="0.9s"></a></li>
-				</ul>
-			</div>
-
-		</div>
-	</div>
+	<div class="col-md-12 no-padding">
+		<img src="images/pie_texto.png" class="img-responsive">
+	</div>	
 </footer>
--->
-
 
 
 
