Efficient Implement of SmoothScroll and fix navbar

--- a/index_entire.html
+++ b/index_entire.html
@@ -76,8 +76,8 @@
 				<ul class="nav navbar-nav">
 					<li><a title="ch s.a.s" href="#home"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
 					<li><a href="#home" >INICIO</a></li>
-					<li><a href="#nosotros" class="smoothScrolll">NOSOTROS</a></li>
-					<li><a href="#equipo" class="smoothScrolll">VALORES</a></li>
+					<li><a href="#nosotros" class="">NOSOTROS</a></li>
+					<li><a href="#equipo" class="">VALORES</a></li>
 					<li><a href="#customers">CLIENTES</a></li>										
 				</ul>
 			</div>
@@ -314,10 +314,7 @@
 <script src="js/jquery.backstretch.min.js"></script>
 <script src="js/jquery.parallax.js"></script>
 <script src="js/nivo-lightbox.min.js"></script>
-<script src="js/smoothscroll.js"></script>
 <script src="js/wow.min.js"></script>
-
-
 <script src="js/custom.js"></script>
 
 
