--- a/services.html
+++ b/services.html
@@ -66,9 +66,11 @@
 				<ul class="nav navbar-nav">
 					<li><a title="ch s.a.s" href="index.html"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
 					<li><a href="index.html" >INICIO</a></li>
-					<li><a href="index.html#nosotros" class="smoothScrolll">NOSOTROS</a></li>					
+					<li><a href="index.html#nosotros" class="">NOSOTROS</a></li>	
+					<li><a href="#services" class="">SERVICIOS</a></li>					
 					<li><a href="#">CLIENTES</a></li>					
-					<li><a href="#" class="smoothScrolll">INDICADORES</a></li>			
+					<li><a href="#" class="">INDICADORES</a></li>	
+					<li><a href="#" class="">CONTÁCTENOS</a></li>		
 				</ul>
 			</div>
 		</div>
@@ -161,7 +163,6 @@
 <script src="js/jquery.backstretch.min.js"></script>
 <script src="js/jquery.parallax.js"></script>
 <script src="js/nivo-lightbox.min.js"></script>
-<script src="js/smoothscroll.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
 
