--- a/contact.html
+++ b/contact.html
@@ -67,9 +67,9 @@
 				<ul class="nav navbar-nav">
 					<li><a title="ch s.a.s" href="index.html"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
 					<li><a href="index.html" >INICIO</a></li>
-					<li><a href="index.html" class="smoothScrolll">NOSOTROS</a></li>					
+					<li><a href="index.html" class="">NOSOTROS</a></li>					
 					<li><a href="customers.html">CLIENTES</a></li>					
-					<li><a href="contact.html" class="smoothScrolll">INDICADORES</a></li>			
+					<li><a href="contact.html" class="">INDICADORES</a></li>			
 				</ul>
 			</div>
 		</div>
@@ -148,7 +148,6 @@
 <script src="js/jquery.backstretch.min.js"></script>
 <script src="js/jquery.parallax.js"></script>
 <script src="js/nivo-lightbox.min.js"></script>
-<script src="js/smoothscroll.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
 
