--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
 				<ul class="nav navbar-nav">
 					<li><a title="ch s.a.s" href="#navigation"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
 					<li><a href="#navigation" >INICIO</a></li>
-					<li><a href="#nosotros" class="smoothScrolll">NOSOTROS</a></li>					
+					<li><a href="#nosotros" class="">NOSOTROS</a></li>					
+					<li><a href="services.html" class="">SERVICIOS</a></li>	
 					<li><a href="#">CLIENTES</a></li>		
-					<li><a href="#" class="smoothScrolll">INDICADORES</a></li>
-					<!--<li><a href="contact.html" class="smoothScrolll">INDICADORES</a></li>	-->		
+					<li><a href="#" class="">INDICADORES</a></li>
+					<li><a href="#" class="">CONTÁCTENOS</a></li>
+					<!--<li><a href="contact.html" class="">INDICADORES</a></li>	-->		
 				</ul>
 			</div>
 		</div>
@@ -181,7 +183,6 @@
 <script src="js/jquery.backstretch.min.js"></script>
 <script src="js/jquery.parallax.js"></script>
 <script src="js/nivo-lightbox.min.js"></script>
-<script src="js/smoothscroll.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
 
