--- a/contact.html
+++ b/contact.html
@@ -77,11 +77,11 @@
 </div>
 
 
-<!-- indicadores fondo -->
+<!-- indicadores fondo 
 <div class="col-md-12 service">
 	<img src="images/indicadores.jpg" class="img-responsive">
 </div>	
-
+-->
 
 
 <!-- Contact seccion
@@ -95,40 +95,19 @@
 
 <!-- Contact section
 +++ Oculta temporalmente +++
-==================================================
-<section id="contact" class="parallax-section">
+================================================== -->
+<section id="home2" class="-">
 	<div class="container">
 		<div class="row">
-
-
 			<div class="col-md-offset-2 col-md-8 col-sm-12">
-				<div class="section-title">
-					<h1>Get in touch</h1>
-					<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet.</p>
-				</div>
+				<h2 class="wow bounceIn">Grafitalento S.A.S</h2>
+				<h4 class="font-weight-normal font-color-gray wow fadeInUp" data-wow-delay="1s">Productos gráficos, visuales y publicitarios, diseño a la medida del cliente, y gran variedad de servicios en el campo de artes gráficas</h4>
+				<a href="coming.html" class="btn btn-default section-btn smoothScroll wow fadeInUp" data-wow-delay="1.7s">VER MÁS</a>
 			</div>
-
-
-			<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 wow fadeIn" data-wow-delay="0.6s">
-				<form action="contact.php" method="post">
-					<div class="col-md-6 col-sm-6">
-						<input type="text" class="form-control" placeholder="Name" name="name" required>
-						<input type="email" class="form-control" placeholder="Email" name="email" required>
-						<input type="telephone" class="form-control" placeholder="Phone" name="phone" required>
-					</div>
-					<div class="col-md-6 col-sm-6">
-						<textarea class="form-control" placeholder="Message" rows="7" name"message" required></textarea>
-					</div>
-					<div class="col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8">
-						<input type="submit" class="form-control" value="SHOOT MESSAGE">
-					</div>
-				</form>
-			</div>
-
 		</div>
 	</div>
 </section>
--->
+
 
 <!-- Pie de pagina (Footer)
 ==================================================  -->
