--- a/contact.html
+++ b/contact.html
@@ -96,13 +96,21 @@
 <!-- Contact section
 +++ Oculta temporalmente +++
 ================================================== -->
-<section id="home2" class="-">
+<section id="home2">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-offset-2 col-md-8 col-sm-12">
-				<h2 class="wow bounceIn">Grafitalento S.A.S</h2>
-				<h4 class="font-weight-normal font-color-gray wow fadeInUp" data-wow-delay="1s">Productos gráficos, visuales y publicitarios, diseño a la medida del cliente, y gran variedad de servicios en el campo de artes gráficas</h4>
-				<a href="coming.html" class="btn btn-default section-btn smoothScroll wow fadeInUp" data-wow-delay="1.7s">VER MÁS</a>
+			<div class="col-md-12 col-sm-12">
+				<form action="mail.php" method="POST">
+					<p>Name</p> <input type="text" name="name">
+					<p>Email</p> <input type="text" name="email">
+					<p>Message</p><textarea name="message" rows="6" cols="25"></textarea><br />
+					<input type="submit" value="Send">
+					<input type="reset" value="Clear">
+				</form>
+
+				<!--<h2 class="wow bounceIn">CONTÁCTENOS</h2>
+				<h4 class="font-weight-normal  wow fadeInUp" data-wow-delay="0.4s">Contamos con un equipo de contadores a tu servicio, por favor escríbenos tus preguntas e inquietudes.</h4>
+				<a href="coming.html" class="btn btn-default section-btn smoothScroll wow fadeInUp" data-wow-delay="0.6s">VER MÁS</a>-->
 			</div>
 		</div>
 	</div>
@@ -110,14 +118,13 @@
 
 
 <!-- Pie de pagina (Footer)
-==================================================  -->
+==================================================  
 <footer>
 	<div class="col-md-12 no-padding">
 		<img src="images/pie_texto.png" class="img-responsive">
 	</div>	
 </footer>
-
-
+-->
 
 <!-- Javascript
 ================================================== -->
