All section finished contact, customers

--- a/services.html
+++ b/services.html
@@ -68,9 +68,9 @@
 					<li><a href="index.html" >INICIO</a></li>
 					<li><a href="index.html#nosotros" class="">NOSOTROS</a></li>	
 					<li><a href="#services" class="">SERVICIOS</a></li>					
-					<li><a href="#">CLIENTES</a></li>					
+					<li><a href="customers.html">CLIENTES</a></li>					
 					<li><a href="#" class="">INDICADORES</a></li>	
-					<li><a href="#" class="">CONTÁCTENOS</a></li>		
+					<li><a href="contact.html" class="">CONTÁCTENOS</a></li>		
 				</ul>
 			</div>
 		</div>
