--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,8 @@
 
 <!-- Navigation section
 ================================================== -->
+<!-- Navigation section
+================================================== -->
 <div id="navigation" class="top-position">
 	<div class="navbar navbar-default" role="navigation">
 		<div class="container">
@@ -67,9 +69,12 @@
 				<ul class="nav navbar-nav">
 					<li><a title="ch s.a.s" href="index.html"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
 					<li><a href="index.html" >INICIO</a></li>
-					<li><a href="index.html" class="">NOSOTROS</a></li>					
-					<li><a href="customers.html">CLIENTES</a></li>					
-					<li><a href="contact.html" class="">INDICADORES</a></li>			
+					<li><a href="index.html#nosotros" class="">NOSOTROS</a></li>					
+					<li><a href="services.html" class="">SERVICIOS</a></li>	
+					<li><a href="customers.html">CLIENTES</a></li>		
+					<li><a href="#" class="">INDICADORES</a></li>
+					<li><a href="#contact" class="">CONTÁCTENOS</a></li>
+					<!--<li><a href="contact.html" class="">INDICADORES</a></li>	-->		
 				</ul>
 			</div>
 		</div>
@@ -96,21 +101,18 @@
 <!-- Contact section
 +++ Oculta temporalmente +++
 ================================================== -->
-<section id="home2">
+<section id="contact">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
 				<form action="mail.php" method="POST">
-					<p>Name</p> <input type="text" name="name">
-					<p>Email</p> <input type="text" name="email">
-					<p>Message</p><textarea name="message" rows="6" cols="25"></textarea><br />
-					<input type="submit" value="Send">
-					<input type="reset" value="Clear">
+					<h2 class="wow bounceIn">CONTÁCTENOS</h2>
+					<h4 class="font-weight-normal wow fadeInUp" data-wow-delay="0.2s">Contamos con un equipo de contadores a tu servicio, por favor escríbenos tus preguntas e inquietudes.</h4>
+					<input placeholder="  Nombre" type="text" class="wow fadeIn" data-wow-delay="0.3s" name="name">	
+					<input placeholder="  E-mail" type="text" class="wow fadeIn" data-wow-delay="0.5s" name="email">					
+					<textarea placeholder="  Mensaje" class="wow fadeIn" data-wow-delay="0.7s" name="message" rows="5" cols="25"></textarea><br />
+					<input class="btn btn-default contact-submit smoothScroll wow fadeInUp" data-wow-delay="0.6s" type="submit" value="ENVIAR">	
 				</form>
-
-				<!--<h2 class="wow bounceIn">CONTÁCTENOS</h2>
-				<h4 class="font-weight-normal  wow fadeInUp" data-wow-delay="0.4s">Contamos con un equipo de contadores a tu servicio, por favor escríbenos tus preguntas e inquietudes.</h4>
-				<a href="coming.html" class="btn btn-default section-btn smoothScroll wow fadeInUp" data-wow-delay="0.6s">VER MÁS</a>-->
 			</div>
 		</div>
 	</div>
