--- a/customers.html
+++ b/customers.html
@@ -57,32 +57,20 @@
 </div>
 
 
-<!-- Home section
-================================================== -->
-<section id="home" class="">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8 col-sm-12 ">
-				<a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">SERVICIOS</a>
-				<a href="contact.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="1.4s">CONTÁCTENOS</a>				
-			</div>
-		</div>
-	</div>
-</section>
-
-
 <!-- Navigation section
 ================================================== -->
-<div class="top-position">
+<div id="navigation" class="top-position">
 	<div class="navbar navbar-default" role="navigation">
 		<div class="container">
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li><a title="ch s.a.s" href="#home"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
-					<li><a href="#home" >INICIO</a></li>
-					<li><a href="index.html" class="">NOSOTROS</a></li>
-					<li><a href="index.html" class="">VALORES</a></li>
-					<li><a href="#customers">CLIENTES</a></li>										
+					<li><a title="ch s.a.s" href="index.html"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
+					<li><a href="index.html" >INICIO</a></li>
+					<li><a href="index.html#nosotros" class="">NOSOTROS</a></li>	
+					<li><a href="services.html" class="">SERVICIOS</a></li>					
+					<li><a href="#customers">CLIENTES</a></li>					
+					<li><a href="#" class="">INDICADORES</a></li>	
+					<li><a href="contact.html" class="">CONTÁCTENOS</a></li>		
 				</ul>
 			</div>
 		</div>
@@ -90,26 +78,65 @@
 </div>
 
 
-<!-- Curved separator -->
+
+<!-- Curved separator 
 <div class="col-md-12 separator">
 	<img src="images/separador.png" class="img-responsive">
 </div>	
-
+-->
 
 
 <!-- Customers seccion
 ================================================== -->
 <div id="customers"></div>
 
-	<!-- Section title 
+	<!-- Section title -->
 	<div class="row ">
 		<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">						
 			<div class="customers-title ">
 				<h1>Principales clientes</h1>				
 			</div>									
 		</div>
-	</div>-->
+	</div>
 
+	<!-- Customers gallery -->
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 customer">				
+				<img src="images/ab.jpg" class="img-responsive ">
+			</div>
+			<div class="col-md-4 customer">
+				<img src="images/cmtc.jpg" class="img-responsive ">
+			</div>
+			<div class="col-md-4 customer">
+				<img src="images/colombia.jpg" class="img-responsive ">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4 customer">
+				<img src="images/cane.jpg" class="img-responsive ">
+			</div>
+			<div class="col-md-4 customer">
+				<img src="images/fundacion.jpg" class="img-responsive ">
+			</div>
+			<div class="col-md-4 customer">
+				<img src="images/amt.jpg" class="img-responsive ">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4 customer">
+				<img src="images/grafi.jpg" class="img-responsive ">
+			</div>			
+		</div>
+	</div>
+
+<!-- Pie de pagina (Footer)
+==================================================  -->
+<footer>
+	<div class="col-md-12 no-padding">
+		<img src="images/pie_texto.png" class="img-responsive">
+	</div>	
+</footer>
 
 <!-- Javascript
 ================================================== -->
