--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 					<li><a href="#navigation" >INICIO</a></li>
 					<li><a href="#nosotros" class="">NOSOTROS</a></li>					
 					<li><a href="services.html" class="">SERVICIOS</a></li>	
-					<li><a href="#">CLIENTES</a></li>		
+					<li><a href="customers.html#navigation">CLIENTES</a></li>		
 					<li><a href="#" class="">INDICADORES</a></li>
-					<li><a href="#" class="">CONTÁCTENOS</a></li>
+					<li><a href="contact.html" class="">CONTÁCTENOS</a></li>
 					<!--<li><a href="contact.html" class="">INDICADORES</a></li>	-->		
 				</ul>
 			</div>
@@ -84,7 +84,7 @@
 		<div class="row">
 			<div class="col-md-8 col-sm-12 ">			  	
 				<a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.4s">SERVICIOS</a>
-				<a href="#" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTENOS</a>							  	
+				<a href="contact.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTENOS</a>							  	
 			</div>
 		</div>
 	</div>
