--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<li><a href="services.html" class="">SERVICIOS</a></li>	
 					<li><a href="customers.html#navigation">CLIENTES</a></li>		
 					<li><a href="#" class="">INDICADORES</a></li>
-					<li><a href="contact.html" class="">CONTÁCTENOS</a></li>
+					<li><a href="contact.html" class="">CONTÁCTANOS</a></li>
 					<!--<li><a href="contact.html" class="">INDICADORES</a></li>	-->		
 				</ul>
 			</div>
