--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
 					<li><a href="#services" class="">SERVICIOS</a></li>					
 					<li><a href="customers.html">CLIENTES</a></li>					
 					<li><a href="#" class="">INDICADORES</a></li>	
-					<li><a href="contact.html" class="">CONTÁCTENOS</a></li>		
+					<li><a href="contact.html" class="">CONTÁCTANOS</a></li>		
 				</ul>
 			</div>
 		</div>
