Customers link finished

--- a/customers.html
+++ b/customers.html
@@ -69,21 +69,13 @@
 					<li><a href="index.html#nosotros" class="">NOSOTROS</a></li>	
 					<li><a href="services.html" class="">SERVICIOS</a></li>					
 					<li><a href="#customers">CLIENTES</a></li>					
-					<li><a href="#" class="">INDICADORES</a></li>	
-					<li><a href="contact.html" class="">CONTÁCTANOS</a></li>		
+					<li><a href="contact.html" class="">INDICADORES</a></li>	
+					<li><a href="contact.html#contact" class="">CONTÁCTANOS</a></li>		
 				</ul>
 			</div>
 		</div>
 	</div>
 </div>
-
-
-
-<!-- Curved separator 
-<div class="col-md-12 separator">
-	<img src="images/separador.png" class="img-responsive">
-</div>	
--->
 
 
 <!-- Customers seccion
@@ -103,29 +95,43 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-4 customer">				
-				<img src="images/ab.jpg" class="img-responsive ">
+				<a href="http://abconstrucciones.co/" target="_blank" alt="abconstrucciones">
+					<img src="images/ab.jpg" class="img-responsive">
+				</a>
 			</div>
 			<div class="col-md-4 customer">
-				<img src="images/cmtc.jpg" class="img-responsive ">
+				<a href="http://www.cmt.net.co/about.html" target="_blank" alt="cmt">
+					<img src="images/cmtc.jpg" class="img-responsive ">
+				</a>
 			</div>
 			<div class="col-md-4 customer">
-				<img src="images/colombia.jpg" class="img-responsive ">
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-4 customer">
-				<img src="images/cane.jpg" class="img-responsive ">
-			</div>
-			<div class="col-md-4 customer">
-				<img src="images/fundacion.jpg" class="img-responsive ">
-			</div>
-			<div class="col-md-4 customer">
-				<img src="images/amt.jpg" class="img-responsive ">
+				<a href="https://www.colombia.com/" target="_blank" alt="colombia.com">
+					<img src="images/colombia.jpg" class="img-responsive">
+				</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-4 customer">
-				<img src="images/grafi.jpg" class="img-responsive ">
+				<a href="http://www.delightcane.com/" target="_blank" alt="delightcane">
+					<img src="images/cane.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-md-4 customer">
+				<a href="http://www.formandofuturo.org/" target="_blank" alt="fundacion futuro">
+					<img src="images/fundacion.jpg" class="img-responsive">
+				</a>
+			</div>
+			<div class="col-md-4 customer">
+				<a href="http://amtlogistica.net/" target="_blank" alt="amt logistica">
+					<img src="images/amt.jpg" class="img-responsive">
+				</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4 customer">
+				<a href="http://grafitalento.com/" target="_blank" alt="Grafitalento S.A.S">
+					<img src="images/grafi.jpg" class="img-responsive ">
+				</a>
 			</div>			
 		</div>
 	</div>
