--- a/index.html
+++ b/index.html
@@ -68,17 +68,14 @@
 					<li><a href="#nosotros" class="">NOSOTROS</a></li>					
 					<li><a href="services.html" class="">SERVICIOS</a></li>	
 					<li><a href="customers.html#navigation">CLIENTES</a></li>		
-					<li><a href="#" class="">INDICADORES</a></li>
-					<li><a href="contact.html" class="">CONTÁCTANOS</a></li>
+					<li><a href="contact.html" class="">INDICADORES</a></li>
+					<li><a href="contact.html#contact" class="">CONTÁCTANOS</a></li>
 					<!--<li><a href="contact.html" class="">INDICADORES</a></li>	-->		
 				</ul>
 			</div>
 		</div>
 	</div>
 </div>
-
-
-
 
 
 <!-- Home section
@@ -88,7 +85,7 @@
 		<div class="row">
 			<div class="col-md-8 col-sm-12 ">			  	
 				<a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.4s">SERVICIOS</a>
-				<a href="contact.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTENOS</a>							  	
+				<a href="contact.html#contact" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTENOS</a>							  	
 			</div>
 		</div>
 	</div>
