--- a/services.html
+++ b/services.html
@@ -69,8 +69,8 @@
 					<li><a href="index.html#nosotros" class="">NOSOTROS</a></li>	
 					<li><a href="#services" class="">SERVICIOS</a></li>					
 					<li><a href="customers.html">CLIENTES</a></li>					
-					<li><a href="#" class="">INDICADORES</a></li>	
-					<li><a href="contact.html" class="">CONTÁCTANOS</a></li>		
+					<li><a href="contact.html" class="">INDICADORES</a></li>	
+					<li><a href="contact.html#contact" class="">CONTÁCTANOS</a></li>		
 				</ul>
 			</div>
 		</div>
