--- a/contact.html
+++ b/contact.html
@@ -90,8 +90,8 @@
 			</section>
 		</div>
 		<div class="col-md-4 col-sm-12 no-padding">								
-			<div class="indicadores-container wow bounceIn">						
-				<!-- DolarWeb IndMax Start --><div id="IndicadoresMax"><h2><a href="https://dolar.wilkinsonpc.com.co/">Dolar Hoy Colombia</a></h2></div><script type="text/javascript" src="https://dolar.wilkinsonpc.com.co/widgets/gratis/indicadores-economicos-max.js?ancho=410&alto=400&fondo=transparent&fsize=17&ffamily=sans-serif&fcolor=000000"></script><!-- DolarWeb IndMax End -->								
+			<div class="indicadores-container wow flipInX">						
+				<!-- DolarWeb IndMax Start --><div id="IndicadoresMax"><h2><a href="https://dolar.wilkinsonpc.com.co/">Dolar Hoy Colombia</a></h2></div><script type="text/javascript" src="https://dolar.wilkinsonpc.com.co/widgets/gratis/indicadores-economicos-max.js?ancho=410&alto=380&fondo=transparent&fsize=17&ffamily=sans-serif&fcolor=000000"></script><!-- DolarWeb IndMax End -->			
 			</div>								
 		</div>
 	</div>
@@ -103,8 +103,8 @@
 <section id="dian">
 	<div class="container">
 		<div class="row">			
-			<div style="text-align: center;" class="col-md-5 col-sm-12">			
-				<img src="images/dian.png" height="110px" class="" alt="dian">			
+			<div  class="col-md-5 col-sm-12 ">			
+				<img src="images/dian.png" height="110px" class="dian-image" alt="dian">			
 			</div>
 			<div class="col-md-7 col-sm-12">			
 				<img src="images/republica.png" height="100px" class="" alt="dian">			
