Hot fix, visual bugs fixed

--- a/contact.html
+++ b/contact.html
@@ -103,11 +103,15 @@
 <section id="dian">
 	<div class="container">
 		<div class="row">			
-			<div  class="col-md-5 col-sm-12 ">			
-				<img src="images/dian.png" height="110px" class="dian-image" alt="dian">			
+			<div  class="col-md-5 col-sm-12 align-image">		
+				<a href="https://www.dian.gov.co/" target="_blank">
+					<img src="images/dian.png" height="110px" class="" alt="dian">			
+				</a>					
 			</div>
-			<div class="col-md-7 col-sm-12">			
-				<img src="images/republica.png" height="100px" class="" alt="dian">			
+			<div class="col-md-7 col-sm-12 align-image">			
+				<a href="https://www.banrep.gov.co/" target="_blank"">
+					<img src="images/republica.png" height="100px" class="" alt="banco de la republica">			
+				</a>									
 			</div>
 		</div>
 	</div>
