First iteration off responsive design
Several improves to main page and navigation. Bootstrap grid implemented.

--- a/index_resp.html
+++ b/index_resp.html
@@ -31,7 +31,7 @@
 
 	<!-- Main CSS
    ================================================== -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-resp.css">
 
 	<!-- Google web font
    ================================================== -->
