--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								<span class="icon-bar"></span>
 							</button>							
 							<a title="ch s.a.s" href="#navigation" class="navbar-brand slim-padding">
-								<img src="images/logo.png" class="" width="190" alt="ch s.a.s" />
+								<img src="images/logo.png" class=""  alt="ch s.a.s" />
 							</a>					
 						</div>
 						<div class="collapse navbar-collapse" id="main_nav">
