Some issues fixed

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 	
 
 	<div id = "navigation">
-		<div class="container"> 
+		<div class="container-fluid"> 
 			<header>			
 				<nav class="navbar navbar-default navbar-fixed-top">
-					<div class="container">
+					<div class="container-fluid">
 						<div class="navbar-header">
 							<button type="button" class="navbar-toggle collapsed toggle-button" data-toggle="collapse" data-target="#main_nav">
 								<span class="sr-only">Menu</span>
@@ -92,7 +92,7 @@
 								<span class="icon-bar"></span>
 							</button>							
 							<a title="ch s.a.s" href="#navigation" class="navbar-brand slim-padding">
-								<img src="images/logo.png" class=""  alt="ch s.a.s" />
+								<img src="images/logo.png" class="logo"  alt="ch s.a.s" />
 							</a>					
 						</div>
 						<div class="collapse navbar-collapse" id="main_nav">
