--- a/index_resp.html
+++ b/index_resp.html
@@ -6,7 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">	
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<!--<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">-->
 
 	<!-- Site title
    ================================================== -->
@@ -80,7 +81,7 @@
 	
 
 	<div id = "navigation">
-		<div class="container"> 
+		<div class="container-fluid"> 
 			<header>			
 				<nav class="navbar navbar-default navbar-fixed-top">
 					<div class="container">
@@ -91,15 +92,18 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>							
-							<a title="ch s.a.s" href="#navigation" class="navbar-brand slim-padding">
-								<img src="images/logo.png" class="" width="190" alt="ch s.a.s" />
+							<a title="ch s.a.s" href="#navigation" class="navbar-brand">
+							    Auditores y Consultores CH
 							</a>					
 						</div>
 						<div class="collapse navbar-collapse" id="main_nav">
 							<ul class="nav navbar-nav">								
-								<li><a href="">Inicio</a></li>
-								<li><a href="">Servicios</a></li>
+								
 								<li><a href="">Nosotros</a></li>
+								<li><a href="">Servicios</a></li>
+								<li><a href="">Clientes</a></li>
+								<li><a href="">Indicadores</a></li>
+								<li><a href="">Contáctanos</a></li>
 							</ul>
 						</div>
 					</div>
@@ -199,8 +203,12 @@
 	<!-- Pie de pagina (Footer)
 	==================================================  -->
 	<footer>
-		<div class="col-md-12 no-padding">
-			<img src="images/pie_texto.png" class="img-responsive">
+	    <div class = "container-fluid no-padding">
+	        <div class = "row"> 
+        		<div class="col-md-12 col-sm-12 ">
+        			<img src="images/pie_texto.png" class="img-responsive">
+        		</div>	
+        	</div>	
 		</div>	
 	</footer>
 
