start resp design on services

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<div class="collapse navbar-collapse" id="main_nav">
 							<ul class="nav navbar-nav">								
 								<li><a href="">Inicio</a></li>
-								<li><a href="">Servicios</a></li>
+								<li><a href="services.html">Servicios</a></li>
 								<li><a href="">Nosotros</a></li>
 							</ul>
 						</div>
@@ -138,7 +138,7 @@
 			</div>
 		</div>
 	
-		<!--
+		<!-- DEPRECATED: Whole image not longer display
 		<section id = "identity">		
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
