--- a/services.html
+++ b/services.html
@@ -50,60 +50,109 @@
 
 
 <!-- Preloader section
-================================================== -->
-<div class="preloader">
-	<!-- ++ I removed the 'sk-spinner' class -->
-	<div class="sk-spinner-pulse"></div>
-</div>
+	================================================== 
+	<div class="preloader">
+		
+		<div class="sk-spinner-pulse"></div>
+	</div>
+	-->
 
 
-<!-- Navigation section
-================================================== -->
-<div id="navigation" class="top-position">
-	<div class="navbar navbar-default" role="navigation">
-		<div class="container">
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li><a title="ch s.a.s" href="index.html"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
-					<li><a href="index.html" >INICIO</a></li>
-					<li><a href="index.html#nosotros" class="">NOSOTROS</a></li>	
-					<li><a href="#services" class="">SERVICIOS</a></li>					
-					<li><a href="customers.html">CLIENTES</a></li>					
-					<li><a href="contact.html" class="">INDICADORES</a></li>	
-					<li><a href="contact.html#contact" class="">CONTÁCTANOS</a></li>		
-				</ul>
+	<!-- Navigation section
+	==================================================  
+	<div id = "navigation" class="top-position">
+		<div class="navbar navbar-default" role="navigation">
+			<div class="container">
+				<div class="collapse navbar-collapse">
+					<ul class="nav navbar-nav">
+						<li><a title="ch s.a.s" href="#navigation"><img src="images/logo.png" width="337" height="135" alt="ch s.a.s" /></a></li>
+						<li><a href="#navigation" >INICIO</a></li>
+						<li><a href="#nosotros" class="">NOSOTROS</a></li>					
+						<li><a href="services.html" class="">SERVICIOS</a></li>	
+						<li><a href="customers.html#navigation">CLIENTES</a></li>		
+						<li><a href="contact.html" class="">INDICADORES</a></li>
+						<li><a href="contact.html#contact" class="">CONTÁCTANOS</a></li>					
+					</ul>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
+	-->
+	
+
+	<div id = "navigation">
+		<div class="container-fluid"> 
+			<header>			
+				<nav class="navbar navbar-default navbar-fixed-top">
+					<div class="container-fluid">
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed toggle-button" data-toggle="collapse" data-target="#main_nav">
+								<span class="sr-only">Menu</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>							
+							<a title="ch s.a.s" href="#navigation" class="navbar-brand slim-padding">
+								<img src="images/logo.png" class="logo"  alt="ch s.a.s" />
+							</a>					
+						</div>
+						<div class="collapse navbar-collapse" id="main_nav">
+							<ul class="nav navbar-nav">								
+								<li><a href="">Inicio</a></li>
+								<li><a href="#services">Servicios</a></li>
+								<li><a href="">Nosotros</a></li>
+							</ul>
+						</div>
+					</div>
+				</nav>				
+			</header>
+		</div>
+	</div>
 
 
 <!-- Service seccion
 ================================================== -->
 <div id="services"></div>
 
-	<!-- Section title -->
-	<div class="row">
-		<div class="col-md-offset-1 col-md-8 col-sm-offset-1 col-sm-10 wow bounceIn">						
-			<div class="services-title">
-				<h1>Servicios</h1>				
-			</div>									
+<div class = "container">
+	<div class="row title">
+		<div class="col-md-12 col-sm-12 wow bounceIn">
+			<div class="identity-title">
+				<h2>Servicios</h2>				
+			</div>
 		</div>
 	</div>
 
+
 	<!-- Consultoria -->
-	<section class="service parallax-section">
+	<section class="service">
+		<div class="row">
+			<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp " data-wow-delay="0.4s">
+				<img src="images/consultoria_1.jpg" class="img-responsive align-image" alt="Identidad">
+			</div>	
+			<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
+				<img src="images/consultoria_2.jpg" class="img-responsive align-image" alt="Identidad">
+			</div>				
+		</div>
+	</section>
+
+
+</div>
+
+
+	<!-- Auditoria -->
+	<section class="service ">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
-					<img src="images/consultoria.jpg" class="img-responsive" alt="consultoria">
+					<img src="images/consultoria.jpg" class="img-responsive" alt="auditoria">
 				</div>		
 			</div>
 		</div>
 	</section>
 
 	<!-- Auditoria -->
-	<section class="service parallax-section">
+	<section class="service ">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
