--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
 <html lang="en">
 <head>
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">	
+	<!-- Deprecated tag
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge"> -->	
+
+	<meta charset="utf-8">	
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
 
 	<!-- Site title
    ================================================== -->
 	<title>Auditores y consultores CH</title>
 
 	<!-- Bootstrap CSS
-   ================================================== -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+   ================================================== 
+	<link rel="stylesheet" href="css/bootstrap.min.css">-->
+	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 
 	<!-- Animate CSS
    ================================================== -->
@@ -31,7 +36,7 @@
 
 	<!-- Main CSS
    ================================================== -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-resp.css">
 
 	<!-- Google web font
    ================================================== -->
@@ -49,12 +54,11 @@
 
 
 	<!-- Preloader section
-	================================================== 
-	<div class="preloader">
-		
+	================================================== -->
+	<div class="preloader">		
 		<div class="sk-spinner-pulse"></div>
 	</div>
-	-->
+	
 
 
 	<!-- Navigation section
@@ -77,51 +81,48 @@
 		</div>
 	</div>
 	-->
-	
 
-	<div id = "navigation">
-		<div class="container-fluid"> 
-			<header>			
-				<nav class="navbar navbar-default navbar-fixed-top">
-					<div class="container-fluid">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed toggle-button" data-toggle="collapse" data-target="#main_nav">
-								<span class="sr-only">Menu</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>							
-							<a title="ch s.a.s" href="#navigation" class="navbar-brand slim-padding">
-								<img src="images/logo.png" class="logo"  alt="ch s.a.s" />
-							</a>					
-						</div>
-						<div class="collapse navbar-collapse" id="main_nav">
-							<ul class="nav navbar-nav">								
-								<li><a href="">Inicio</a></li>
-								<li><a href="services.html">Servicios</a></li>
-								<li><a href="">Nosotros</a></li>
-							</ul>
-						</div>
-					</div>
-				</nav>				
-			</header>
+	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+		<a class="navbar-brand" href="#">
+			<img src="images/logo.png" class = "img-fluid logo" alt="">
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto my-2">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Link</a>
+				</li>
+				
+				<li class="nav-item">
+					<a class="nav-link disabled" href="#">Disabled</a>
+				</li>
+			</ul>			
 		</div>
-	</div>
+	</nav>
+
 
 
 	<!-- Home section
-	================================================== 
-	<section id="home">
-		<div class="container">
+	================================================== -->
+	<section class="after-nav-margin" id="home">
+		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-8 col-sm-12 ">			  	
+				<div class="col-lg-12 col-md-12 col-sm-12 p-0">	
+					<img src="images/home_nuevo.jpg" class="img-fluid align-image" alt="Identidad">		  	
+					
 					<a href="services.html" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.4s">SERVICIOS</a>
-					<a href="contact.html#contact" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTANOS</a>  	
+					<a href="contact.html#contact" class="btn btn-default section-btn wow fadeInUp" data-wow-delay="0.9s">CONTÁCTANOS</a> 
 				</div>
 			</div>
 		</div>
 	</section>
-	-->
+
 
 
 	<!-- Identity (Mision, Vision y valores) seccion
@@ -132,7 +133,7 @@
 	<div class = "container">
 		<div class="row title">
 			<div class="col-md-12 col-sm-12 wow bounceIn">
-				<div class="identity-title">
+				<div class="">
 					<h2>Nosotros</h2>				
 				</div>
 			</div>
@@ -142,7 +143,7 @@
 		<section id = "identity">		
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/vi_mi_ob.webp" class="img-responsive" alt="Identidad">
+					<img src="images/vi_mi_ob.webp" class="img-fluid" alt="Identidad">
 				</div>		
 			</div>		
 		</section>
@@ -151,13 +152,13 @@
 		<section id = "identity">		
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp " data-wow-delay="0.4s">
-					<img src="images/vision.jpg" class="img-responsive align-image" alt="Identidad">
+					<img src="images/vision.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
 				<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/mision.jpg" class="img-responsive align-image" alt="Identidad">
+					<img src="images/mision.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
 				<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/objetivo.jpg" class="img-responsive align-image" alt="Identidad">
+					<img src="images/objetivo.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
 			</div>		
 		</section> 	
@@ -166,7 +167,7 @@
 
 		<!-- Values (Valores y equipo profesional) seccion
 		================================================== -->
-		<div id="equipo" class="no-space"></div>
+		<div id="equipo" class="no-space "></div>
 
 		<!-- Section title -->
 		<div class="row title">
@@ -179,16 +180,16 @@
 			<div class="row">
 				<div class="valores">
 					<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
-						<img src="images/values.jpg" class="img-responsive" alt="Valores y equipo profesional">
+						<img src="images/values.jpg" class="img-fluid" alt="Valores y equipo profesional">
 					</div>	
 				</div>
 
 				<div class="valores-divided">
 					<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp no-padding-margin-y" data-wow-delay="0.4s">
-						<img src="images/profesional.jpg" class="img-responsive" alt="Valores y equipo profesional">
+						<img src="images/profesional.jpg" class="img-fluid" alt="Valores y equipo profesional">
 					</div>	
 					<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp no-padding-margin-y" data-wow-delay="0.4s">
-						<img src="images/valores.jpg" class="img-responsive" alt="Valores y equipo profesional">
+						<img src="images/valores.jpg" class="img-fluid" alt="Valores y equipo profesional">
 					</div>	
 				</div>			
 			</div>		
@@ -200,20 +201,26 @@
 	==================================================  -->
 	<footer>
 		<div class="col-md-12 no-padding">
-			<img src="images/pie_texto.png" class="img-responsive">
+			<img src="images/pie_texto.png" class="img-fluid">
 		</div>	
 	</footer>
 
 
 
 	<!-- Javascript
-	================================================== -->
+	================================================== 
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.sticky.js"></script>
-	<script src="js/jquery.backstretch.min.js"></script>
+	
 	<script src="js/jquery.parallax.js"></script>
-	<script src="js/nivo-lightbox.min.js"></script>
+	-->
+
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+	
+	
 	<script src="js/wow.min.js"></script>
 	<script src="js/custom.js"></script>
 
