--- a/index_resp.html
+++ b/index_resp.html
@@ -2,20 +2,24 @@
 <html lang="en">
 <head>
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">	
+	<!-- Deprecated tag
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge"> -->	
+	
+	<meta charset="utf-8">	
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<!--<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
 
 	<!-- Site title
    ================================================== -->
 	<title>Auditores y consultores CH</title>
 
 	<!-- Bootstrap CSS
-   ================================================== -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+   ================================================== 
+	<link rel="stylesheet" href="css/bootstrap.min.css">-->
+	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 
 	<!-- Animate CSS
    ================================================== -->
@@ -78,13 +82,47 @@
 		</div>
 	</div>
 	-->
-	
 
+	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+		<a class="navbar-brand" href="#">
+			<img src="images/logo.png" class = "img-fluid" width="200" alt="">
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto my-2">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Link</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Dropdown
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" href="#">Action</a>
+					<a class="dropdown-item" href="#">Another action</a>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="#">Something else here</a>
+					</div>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link disabled" href="#">Disabled</a>
+				</li>
+			</ul>			
+		</div>
+	</nav>
+	
+	<!--
 	<div id = "navigation">
 		<div class="container-fluid"> 
 			<header>			
-				<nav class="navbar navbar-default navbar-fixed-top">
-					<div class="container">
+				<nav class="navbar navbar-default ">
+					<div class="container-fluid">
 						<div class="navbar-header">
 							<button type="button" class="navbar-toggle collapsed toggle-button" data-toggle="collapse" data-target="#main_nav">
 								<span class="sr-only">Menu</span>
@@ -92,18 +130,15 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>							
-							<a title="ch s.a.s" href="#navigation" class="navbar-brand">
-							    Auditores y Consultores CH
+							<a title="ch s.a.s" href="#navigation" class="navbar-brand slim-padding">
+								<img src="images/logo.png" class="logo"  alt="ch s.a.s" />
 							</a>					
 						</div>
 						<div class="collapse navbar-collapse" id="main_nav">
 							<ul class="nav navbar-nav">								
-								
+								<li><a href="">Inicio</a></li>
+								<li><a href="services.html">Servicios</a></li>
 								<li><a href="">Nosotros</a></li>
-								<li><a href="">Servicios</a></li>
-								<li><a href="">Clientes</a></li>
-								<li><a href="">Indicadores</a></li>
-								<li><a href="">Contáctanos</a></li>
 							</ul>
 						</div>
 					</div>
@@ -111,6 +146,7 @@
 			</header>
 		</div>
 	</div>
+	-->
 
 
 	<!-- Home section
@@ -142,7 +178,7 @@
 			</div>
 		</div>
 	
-		<!--
+		<!-- DEPRECATED: Whole image not longer display
 		<section id = "identity">		
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.4s">
@@ -155,13 +191,13 @@
 		<section id = "identity">		
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp " data-wow-delay="0.4s">
-					<img src="images/vision.jpg" class="img-responsive align-image" alt="Identidad">
+					<img src="images/vision.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
 				<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/mision.jpg" class="img-responsive align-image" alt="Identidad">
+					<img src="images/mision.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
 				<div class="col-lg-4 col-md-4 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/objetivo.jpg" class="img-responsive align-image" alt="Identidad">
+					<img src="images/objetivo.jpg" class="img-fluid align-image" alt="Identidad">
 				</div>	
 			</div>		
 		</section> 	
@@ -203,24 +239,28 @@
 	<!-- Pie de pagina (Footer)
 	==================================================  -->
 	<footer>
-	    <div class = "container-fluid no-padding">
-	        <div class = "row"> 
-        		<div class="col-md-12 col-sm-12 ">
-        			<img src="images/pie_texto.png" class="img-responsive">
-        		</div>	
-        	</div>	
+		<div class="col-md-12 no-padding">
+			<img src="images/pie_texto.png" class="img-responsive">
 		</div>	
 	</footer>
 
 
 
 	<!-- Javascript
-	================================================== -->
+	================================================== 
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.sticky.js"></script>
 	<script src="js/jquery.backstretch.min.js"></script>
 	<script src="js/jquery.parallax.js"></script>
+	-->
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+	
+	
 	<script src="js/nivo-lightbox.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/custom.js"></script>
