--- a/services.html
+++ b/services.html
@@ -163,7 +163,7 @@
 	</section>
 
 	<!-- Revisoria fiscal -->
-	<section class="service parallax-section">
+	<section class="service ">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
@@ -174,7 +174,7 @@
 	</section>
 
 	<!-- Outsourcing contable -->
-	<section class="service parallax-section">
+	<section class="service ">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
@@ -185,7 +185,7 @@
 	</section>
 
 	<!-- Asesoria en las normas NIC -->
-	<section class="service parallax-section">
+	<section class="service ">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 wow fadeInUp" data-wow-delay="0.2s">
